--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,450 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NA_MU | Ivanenko</title>
+    <link rel="icon" href="./images/NA_MU-logo.svg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page_content">
+    <header class="header grid grid-tablet grid-desctop">
+      <a href="#menu" class="header_menu">
+        <img 
+          src="./images/menu.svg"
+          class="header_menu_img"
+          alt="menu"
+        >
+      </a>
+
+      <div class="header_top grid_item grid_item--tablet-4-6 grid_item--desktop-6-12">
+        <a href="#" class="header_top_logo">
+          <img
+            src="./images/NA_MU-logo.svg"
+            alt="NAMU"
+            class="header_top_logo_img"
+          >
+        </a>
+      </div>
+
+      <div class="header_buy grid_item grid_item--tablet-1-3 grid_item--desktop-1-5">
+        <h1 class="header_buy_title">
+          ХУДОЖНІЙ МУЗЕЙ
+        </h1>
+        <a href="#actions" class="header_buy_link">
+          <p class="header_buy_link_text">КВИТКИ</p>
+
+          <div class="header_buy_link_button">
+            <img
+            src="./images/header/go_to.png"
+            alt="go_to"
+            class="header_buy_link_button_img"
+            >
+          </div>
+        </a>
+      </div>
+    </header>
+
+    <nav id="menu" class="page_content_menu menu">
+      <div class="menu_header">
+        <nav class="menu_header_navigation">
+          <div class="menu_header_navigation_conteiner">
+            <a class="menu_header_navigation_link" href="#">
+              <img
+                src="./images/header/X.png"
+                alt="X"
+                class="menu_header_navigation_link_img"
+              >
+            </a>
+  
+            <ul class="menu_header_navigation_list">
+              <li class="menu_header_navigation_list_item">
+                <a class="menu_header_navigation_list_item_link" href="#gallery">
+                  Галерея
+                </a>
+              </li>
+  
+              <li class="menu_header_navigation_list_item">
+                <a class="menu_header_navigation_list_item_link" href="#about_us">
+                  Про Нас
+                </a>
+              </li>
+  
+              <li class="menu_header_navigation_list_item">
+                <a class="menu_header_navigation_list_item_link" href="#actions">
+                  Виставки та події
+                </a>
+              </li>
+  
+              <li class="menu_header_navigation_list_item">
+                <a class="menu_header_navigation_list_item_link" href="#about_us">
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+
+        <div class="menu_header_info">
+          <p class="menu_header_info_title">
+            Графік роботи
+          </p>
+
+          <div class="menu_header_info_conteiner">
+            <p class="menu_header_info_days">
+              12:00 — 20:00 середа
+              <br>
+              12:00 — 20:00 четвер
+              <br>
+              12:00 — 20:00 п’ятниця
+              <br>
+              11:00 — 19:00 субота
+              <br>
+              11:00 — 19:00 неділя
+            </p>
+  
+            <p class="menu_header_info_text">
+              Вихідні: понеділок, вівторок
+              <br>
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+            </p>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <main class="content">
+      <section id="actions" class="content_action">
+        <h2 class="content_action_title">Актуальні події</h2>
+      
+        <div class="content_action_about grid-tablet grid-desctop">
+          <img
+            src="./images/action/1.jpg"
+            class="content_action_about_img grid_item--tablet-1-6 grid_item--desktop-1-7"
+            alt="img"
+          >
+          <div class="content_action_about_when grid_item--tablet-1-4 grid_item--desktop-9-12">
+            <p class="content_action_about_when_text">ВИСТАВКА</p>
+            <p class="content_action_about_when_date">26.08-29.11.2019</p>
+          </div>
+
+          <h3 class="content_action_about_sub-title grid_item--tablet-1-4 grid_item--desktop-9-12">
+            Йду і повертаюсь
+          </h3>
+
+          <p class="content_action_about_text grid_item--tablet-1-4 grid_item--desktop-9-12">
+            Національний Художній Музей України презентує
+            унікальну частину колекції Градобанку -
+            українське мистецтво другої половини
+            1980-1995 років.
+          </p>
+        </div>
+
+        <div class="content_action_about grid-tablet grid-desctop">
+          <img
+            src="./images/action/2.jpg"
+            class="content_action_about_img grid_item--tablet-1-6 grid_item--desktop-1-7"
+            alt="img"
+          >
+          <div class="content_action_about_when grid_item--tablet-1-4 grid_item--desktop-9-12">
+            <p class="content_action_about_when_text">ВИСТАВКА</p>
+            <p class="content_action_about_when_date">26.08-29.11.2019</p>
+          </div>
+
+          <h3 class="content_action_about_sub-title grid_item--tablet-1-4 grid_item--desktop-9-12">
+            І спогади і мрії
+          </h3>
+
+          <p class="content_action_about_text grid_item--tablet-1-4 grid_item--desktop-9-12">
+            Національний художній музей України до 100 річчя від дня народження видатної української
+            художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+          </p>
+        </div>
+      </section>
+
+      <section class="content_lection">
+        <div class="content_lection_text">
+          <div class="content_lection_text_when">
+            <p class="content_lection_text_when_text">
+              ЛЕКЦІЯ
+            </p>
+
+            <p class="content_lection_text_when_data">
+              26/08/2019 - 11:00
+            </p>
+          </div>
+
+          <p class="content_lection_text_title">
+            Від класицизму до романтизму
+          </p>
+        </div>
+
+      </section>
+
+      <section id="gallery" class="content_gallery">
+        <h2 class="content_gallery_title">
+          Галерея
+        </h2>
+
+        <div class="content_gallery_tablet grid grid-tablet">
+          <div class="content_gallery_tablet_box grid_item grid_item--tablet-1-3">
+            <img
+              class="content_gallery_tablet_box_img"
+              src="./images/gallery/111.jpg"
+              alt="img"
+            >
+          </div>
+          <div class="content_gallery_tablet_box1 grid_item grid_item--tablet-4-6">
+            <img
+              class="content_gallery_tablet_box1_img"
+              src="./images/gallery/222.jpg"
+              alt="img"
+            >
+          </div>
+        </div>
+
+        <div class="content_gallery_conteiner grid grid-desctop">
+          <div class="grid_item grid_item--desktop-1-4">
+            <div class="content_gallery_conteiner_box">
+              <img
+                class="content_gallery_conteiner_box_img"
+                src="./images/gallery/1.jpg"
+                alt="img"
+              >
+            </div>
+          </div>
+          <div class="grid_item grid_item--desktop-5-12">
+            <div class="content_gallery_conteiner_box">
+              <img
+                class="content_gallery_conteiner_box_img"
+                src="./images/gallery/2.jpg"
+                alt="img"
+              >
+            </div>
+          </div>
+        </div>
+
+        <div class="content_gallery_conteiner2 grid grid-desctop">
+          <div class="grid_item grid_item--desktop-1-8">
+            <div class="content_gallery_conteiner2_box">
+              <img
+                class="content_gallery_conteiner2_box_img"
+                src="./images/gallery/3.jpg"
+                alt="img"
+              >
+            </div>
+          </div>
+          <div class="grid_item grid_item--desktop-9-12">
+            <div class="content_gallery_conteiner2_box">
+              <img
+                class="content_gallery_conteiner2_box_img"
+                src="./images/gallery/4.jpg"
+                alt="img"
+              >
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="content_subscription">
+        <div class="content_subscription_content">
+          <h2 class="content_subscription_content_title">
+            Підписка
+          </h2>
+
+          <p class="content_subscription_content_text">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+
+          <form class="content_subscription_content_form" action="email">
+            <input
+              type="email"
+              name="email"
+              placeholder="E-mail"
+              class="content_subscription_content_form_input"
+            >
+            <button class="content_subscription_content_form_button">
+              <img
+                src="./images/button.svg"
+                class="content_subscription_content_form_button_img"
+                alt="button"
+              >
+            </button>
+          </form>
+        </div>
+      </section>
+    </main>
+
+    <footer id="about_us" class="footer">
+      <div class="footer_content">
+        <div class="footer_content_links">
+          <a class="footer_content_links_link" href="#">
+            <img
+              class="footer_content_links_link_logo"
+              src="./images/NA_MU-logo.svg"
+              alt="NA_MU"
+            >
+          </a>
+
+          <div class="footer_content_links_social">
+            <a
+              class="footer_content_links_social_link"
+              href="https://uk-ua.facebook.com/namu.museum/"
+              target="_blank"
+            >
+              <img
+                class="footer_content_links_social_link_img"
+                src="./images/fb.svg"
+                alt="fb"
+              >
+            </a>
+
+            <a
+              class="footer_content_links_social_link"
+              href="https://www.instagram.com/namu.museum/"
+              target="_blank"
+            >
+              <img
+                class="footer_content_links_social_link_img"
+                src="./images/insta.svg"
+                alt="insta"
+              >
+            </a>
+          </div>
+        </div>
+
+        <div class="footer_content_text grid grid-tablet grid-desctop">
+          <div class="footer_content_logo">
+            <a href="#" class="footer_content_logo_link">
+              <img
+                src="./images/NA_MU-logo.svg"
+                class="footer_content_logo_link_img"
+                alt="NA_MU"
+              >
+            </a>
+  
+            <div class="footer_content_logo_social">
+              <a
+                class="footer_content_logo_social_link"
+                href="https://uk-ua.facebook.com/namu.museum/"
+                target="_blank"
+              >
+                <img
+                  src="./images/fb.svg"
+                  class="footer_content_logo_social_link_img"
+                  alt="FB"
+                >
+              </a>
+  
+              <a
+                href="https://www.instagram.com/namu.museum/"
+                class="footer_content_logo_social_link"
+                target="_blank"
+              >
+                <img
+                  src="./images/insta.svg"
+                  class="footer_content_logo_social_link_img"
+                  alt="insta"
+                >
+              </a>
+            </div>
+          </div>
+          
+          <div class="footer_content_text_time grid_item--tablet-2-3 grid_item--desktop-3-4 ">
+            <p class="footer_content_text_time_title">
+              Графік роботи
+            </p>
+
+            <p class="footer_content_text_time_text">
+              12:00 — 20:00 середа
+              <br>
+              12:00 — 20:00 четвер
+              <br>
+              12:00 — 20:00 п’ятниця
+              <br>
+              11:00 — 19:00 субота
+              <br>
+              11:00 — 19:00 неділя
+            </p>
+
+            <p class="footer_content_text_time_bottom">
+              Вихідні понеділок, вівторок
+              <br>
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+            </p>
+          </div>
+
+          <div class="footer_content_text_contacts grid_item--tablet-4-5 grid_item--desktop-5-6">
+            <p class="footer_content_text_contacts_title">
+              Контакти:
+            </p>
+
+            <p class="footer_content_text_contacts_text">
+              вул. М. Грушевського, 6; Київ, 01001
+              <br>
+              <a href="tel: +38 (044) 278-13-57">тел. +38 (044) 278-13-57</a>
+              <br>
+              факс +38 (044) 278-74-54
+              <br>
+              <a href="mailto: info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
+            </p>
+          </div>
+
+          <div class="footer_content_text_line grid_item--tablet-2-5 grid_item--desktop-7-7"></div>
+
+          <nav class="footer_content_text_navigation grid_item--tablet-2-3 grid_item--desktop-8-9">
+            <a class="footer_content_text_navigation_link" href="#gallery">Галерея</a>
+
+            <a class="footer_content_text_navigation_link" href="#actions">Виставки та події</a>
+          </nav>
+
+          <nav class="footer_content_text_navigation grid_item--tablet-4-5 grid_item--desktop-10-11">
+            <a class="footer_content_text_navigation_link" href="#about_us">Про Нас</a>
+
+            <a class="footer_content_text_navigation_link" href="#about_us">Контакти</a>
+          </nav>
+        </div>
+
+        <div class="footer_content_line">
+          <div class="footer_content_line_button">
+            <a href="#" class="footer_content_line_button_link">
+              <img
+                class="footer_content_line_button_link_img"
+                src="./images/go_up.svg"
+                alt="go_up"
+              >
+            </a>
+          </div>
+
+          <div class="footer_content_line_line"></div>
+        </div>
+      </div>
+
+      <nav class="footer_navigation">
+        <a class="footer_navigation_link" href="#gallery">Галерея</a>
+        <a class="footer_navigation_link" href="#actions">Виставки та події</a>
+        <a class="footer_navigation_link" href="#about_us">Про Нас</a>
+        <a class="footer_navigation_link" href="#about_us">Контакти</a>
+      </nav>
+
+      <div class="footer_bottom">
+        <p class="footer_bottom_text">
+          Designed by Zhyriada Marina
+        </p>
+
+        <p class="footer_bottom_text">
+          Copyright © 2019. All Rights Reserved.
+        </p>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
