--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,325 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Document</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    >
+
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <nav class="nav">
+      <div class="nav__links">
+        <a href="#events" class="nav__link">Актуальні події</a>
+        <a href="#art" class="nav__link">Лекції</a>
+        <a href="#gallery" class="nav__link">Галерея</a>
+        <a href="#subscribe" class="nav__link">Контакти</a>
+      </div>
+      <a href="#">
+        <svg
+          class="nav__close"
+          width="14"
+          height="14"
+          viewBox="0 0 14 14"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M6.99999 5.58599L11.95 0.635986L13.364 2.04999L8.41399 6.99999L13.364 11.95L11.95 13.364L6.99999 8.41399L2.04999 13.364L0.635986 11.95L5.58599 6.99999L0.635986 2.04999L2.04999 0.635986L6.99999 5.58599Z"
+            fill="white"
+          ></path>
+        </svg>
+      </a>
+
+      <div class="nav__line"></div>
+
+      <div class="nav__info">
+        <div>
+          <p class="nav__title">Графік роботи</p>
+          <p>12:00 — 20:00 середа</p>
+          <p>12:00 — 20:00 четвер</p>
+          <p>12:00 — 20:00 п’ятниця</p>
+          <p>11:00 — 19:00 субота</p>
+          <p>11:00 — 19:00 неділя</p>
+        </div>
+
+        <div>
+          <p class="nav__text">
+            Вихідні: понеділок, вівторок Каса припиняє роботу за 1 годину
+            до закриття музею
+          </p>
+        </div>
+      </div>
+    </nav>
+
+    <header class="header">
+      <div class="header__content grid-item--1-5 grid-item-row--1-2">
+        <a href="#" class="header__open-nav">
+          <svg
+            width="18"
+            height="12"
+            viewBox="0 0 18 12"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M0 12H18V10H0V12ZM0 7H18V5H0V7ZM0 0V2H18V0H0Z"
+              fill="#0F0E08"
+            ></path>
+          </svg>
+        </a>
+        <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+        <a href="#" class="header__tikets">
+          <div class="header__tikets__text">КВИТКИ</div>
+          <div class="header__tikets__arrow">
+            <svg
+              width="8"
+              height="12"
+              viewBox="0 0 8 12"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M0.589844 10.59L5.16984 6L0.589844 1.41L1.99984 0L7.99984 6L1.99984 12L0.589844 10.59Z"
+                fill="#D7DDE3"
+              ></path>
+            </svg>
+          </div>
+        </a>
+        <a href="#" class="header__events"> Події </a>
+      </div>
+      <div class="header__img grid-item--8-13 grid-item-row--1-2">
+        <img
+          class="header__img__item"
+          src="img/header.png"
+          alt="headerImg"
+        >
+        <a href="#">
+          <img 
+            class="logo header__logo"
+            src="img/logo.png"
+            alt="headerLogo"
+          >
+        </a>
+      </div>
+    </header>
+
+    <main>
+      <section id="events" class="events">
+        <div class="container">
+          <h2 class="events__title">Актуальні події</h2>
+
+          <div class="events__item grid grid--tablet">
+            <img
+              class="events__item__img grid-item--1-7"
+              src="img/event1.png"
+              alt="img"
+            >
+            <div class="events__item__content grid-item--8-13">
+              <div class="events__item__exhibition-and-date">
+                <p class="events__item__exhibition">ВИСТАВКА</p>
+                <p class="events__item__date"> 26.08-29.11.2019</p> 
+              </div>
+              <h3 class="events__item__title">Йду і повертаюсь</h3>
+              <p class="events__item__text">
+                Національний Художній Музей України презентує унікальну частину
+                колекції Градобанку - українське мистецтво другої половини
+
+                1980-1995 років.
+              </p>
+            </div>
+          </div>
+          <div class="events__item grid grid--tablet">
+            <img
+              class="events__item__img grid-item--1-7"
+              src="img/event2.png"
+              alt="img"
+            >
+            <div class="events__item__content grid-item--8-13">
+              <div class="events__item__exhibition-and-date">
+                <p class="events__item__exhibition">ВИСТАВКА</p>
+                <p class="events__item__date">26.08-29.11.2019</p>
+              </div>
+              <h3 class="events__item__title">І спогади і мрії</h3>
+              <p class="events__item__text">
+                Національний художній музей України до 100 річчя від дня
+                народження видатної української художниці Тетяни Яблонської
+                відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="art" class="art">
+        <img
+          src="img/artImg.png"
+          alt="img"
+          class="art__img"
+        >
+
+        <div class="art__item">
+          <div class="art__item__info">
+            <div class="art__item__info__name">ЛЕКЦІЯ</div>
+            <div class="art__item__info__data">26/08/2019 - 11:00</div>
+          </div>
+          <h3 class="art__item__title">Від класицизму до романтизму</h3>
+        </div>
+      </section>
+
+      <section id="gallery" class="gallery">
+        <div class="container">
+          <h2 class="gallery__title">Галерея</h2>
+          <div class="gallery__arts grid">
+            <img
+              src="img/item1.png"
+              alt="img"
+              class="gallery__arts__item grid-item--1-5"
+            >
+            <img
+              src="img/item2.png"
+              alt="img"
+              class="gallery__arts__item grid-item--5-13"
+            >
+            <img
+              src="img/item3.png"
+              alt="img"
+              class="gallery__arts__item grid-item--1-9"
+            >
+            <img
+              src="img/item4.png"
+              alt="img"
+              class="gallery__arts__item grid-item--9-13"
+            >
+          </div>
+        </div>
+      </section>
+
+      <section id="subscribe" class="subscribe">
+        <h2 class="subscribe__title">Підписка</h2>
+        <div class="subscribe__subtitle">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </div>
+        <form class="subscribe__form">
+          <input
+            class="subscribe__form__input"
+            type="email"
+            placeholder="E-mail"
+          >
+
+          <button class="subscribe__form__button">
+            <svg
+              width="8"
+              height="12"
+              viewBox="0 0 8 12"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M0.590088 10.59L5.17009 6L0.590088 1.41L2.00009 0L8.00009 6L2.00009 12L0.590088 10.59Z"
+                fill="black"
+              >
+            </svg>
+          </button>
+        </form>
+      </section>
+    </main>
+
+    <div class="container">
+      <footer class="footer">
+        <div class="footer__link">
+          <a href="#"><img src="img/logo.png" alt="Logo"></a>
+          <div class="footer__link__social">
+            <svg
+              class="footer__link__social__facebook"
+              width="12"
+              height="24"
+              viewBox="0 0 12 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M2.7198 4.64899C2.7198 5.2538 2.7198 7.9533 2.7198 7.9533H0.302734V11.9938H2.7198V24.0009H7.68498V11.9942H11.0168C11.0168 11.9942 11.3289 10.0568 11.4801 7.93841C11.0465 7.93841 7.70375 7.93841 7.70375 7.93841C7.70375 7.93841 7.70375 5.58776 7.70375 5.17573C7.70375 4.76282 8.24511 4.2074 8.78017 4.2074C9.31423 4.2074 10.4414 4.2074 11.4854 4.2074C11.4854 3.65727 11.4854 1.75647 11.4854 0.000976577C10.0917 0.000976577 8.50612 0.000976577 7.80721 0.000976577C2.59707 0.000697581 2.7198 4.04524 2.7198 4.64899Z"
+                fill="black"
+              >
+            </svg>
+            <svg
+              class="footer__link__social__inst"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M17.5034 0H6.49657C2.9143 0 0 2.9143 0 6.49657V17.5036C0 21.0857 2.9143 24 6.49657 24H17.5036C21.0857 24 24 21.0857 24 17.5036V6.49657C24 2.9143 21.0857 0 17.5034 0V0ZM12 18.5623C8.38145 18.5623 5.43767 15.6185 5.43767 12C5.43767 8.38145 8.38145 5.43767 12 5.43767C15.6185 5.43767 18.5623 8.38145 18.5623 12C18.5623 15.6185 15.6185 18.5623 12 18.5623ZM18.7192 6.98528C17.6499 6.98528 16.7801 6.11553 16.7801 5.04619C16.7801 3.97686 17.6499 3.10693 18.7192 3.10693C19.7885 3.10693 20.6585 3.97686 20.6585 5.04619C20.6585 6.11553 19.7885 6.98528 18.7192 6.98528Z"
+                fill="black"
+              ></path>
+              <path
+                d="M12.0001 6.84473C9.15753 6.84473 6.84473 9.15734 6.84473 12.0001C6.84473 14.8426 9.15753 17.1554 12.0001 17.1554C14.8428 17.1554 17.1554 14.8426 17.1554 12.0001C17.1554 9.15734 14.8428 6.84473 12.0001 6.84473Z"
+                fill="black"
+              ></path>
+              <path
+                d="M18.7191 4.51416C18.4258 4.51416 18.187 4.75293 18.187 5.04626C18.187 5.3396 18.4258 5.57837 18.7191 5.57837C19.0126 5.57837 19.2514 5.33978 19.2514 5.04626C19.2514 4.75275 19.0126 4.51416 18.7191 4.51416Z"
+                fill="black"
+              ></path>
+            </svg>
+          </div>
+        </div>
+        <div class="footer__info">
+          <div class="footer__work">
+            <p class="footer__title">Графік роботи</p>
+            <p>
+              12:00 — 20:00
+              середа
+            </p>
+            <p>
+              12:00 — 20:00
+              четвер
+            </p>
+            <p>
+              12:00 — 20:00
+              п’ятниця
+            </p>
+            <p>
+               11:00 — 19:00
+              субота
+            </p>
+            <p>
+              11:00 — 19:00
+              неділя
+            </p>
+
+            <p class="footer__text">
+              Вихідні: понеділок, вівторок Каса припиняє роботу за 1 годину до
+              закриття музею
+            </p>
+          </div>
+          <div class="footer__contacts">
+            <p class="footer__title">Контакти:</p>
+            вул. М. Грушевського, 6; Київ, 01001 <br>
+            тел. +38 (044) 278-13-57 <br>
+            факс +38 (044) 278-74-54 <br>
+            e-mail: info@namu.kiev.ua
+          </div>
+          <div class="footer__line"></div>
+          <div class="footer__links">
+            <a href="#gallery" class="footer__links__item">Галерея</a>
+            <a href="#art" class="footer__links__item">Про Нас</a>
+            <a href="#events" class="footer__links__item">Виставки та події</a>
+            <a href="#subscribe" class="footer__links__item"> Контакти </a>
+          </div>
+        </div>
+      </footer>
+    </div>
+
+    <script src="scripts/main.js"></script>
   </body>
 </html>
